src/antlr/dramaParser.js
// Generated from definitions/drama.g4 by ANTLR 4.12.0
// jshint ignore: start
import antlr4 from 'antlr4';
import dramaVisitor from './dramaVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class dramaParser extends antlr4.Parser {

    static grammarFileName = "drama.g4";
    static literalNames = [ null, null, null, null, "'HIA'", "'BIG'", "'OPT'", 
                            "'AFT'", "'DEL'", "'VER'", "'MOD'", "'VSP'", 
                            "'VGL'", "'BST'", "'HST'", "'SBR'", "'SPR'", 
                            "'DRU'", "'NWL'", "'LEZ'", "'DRS'", "'KTG'", 
                            "'STP'", "'EINDPR'", "'RESGR'", null, null, 
                            null, null, null, null, "'NUL'", "'NNUL'", "'POS'", 
                            "'NPOS'", "'NEG'", "'NNEG'", "'GEL'", "'NGEL'", 
                            "'GR'", "'KLG'", "'KL'", "'GRG'", null, null, 
                            null, "'.'", "','", "'|'", "'_'", null, "'-'", 
                            "'+'", "':'", "'('", "')'" ];
    static symbolicNames = [ null, "COMMENT", "STR", "INSTR_NO_MODE_NO_ARG", 
                             "HIA", "BIG", "OPT", "AFT", "DEL", "VER", "MOD", 
                             "VSP", "VGL", "BST", "HST", "SBR", "SPR", "DRU", 
                             "NWL", "LEZ", "DRS", "KTG", "STP", "EINDPR", 
                             "RESGR", "REGISTER", "FULL_MODE", "HALF_MODE", 
                             "LIMITED_MODE", "NUMBER", "CD", "NUL", "NNUL", 
                             "POS", "NPOS", "NEG", "NNEG", "GEL", "NGEL", 
                             "GR", "KLG", "KL", "GRG", "ID", "NEWLINE", 
                             "INT", "DOT", "COMMA", "PIPELINE", "UNDERSCORE", 
                             "SIGN", "MINUS", "PLUS", "COLON", "LEFT_PAREN", 
                             "RIGHT_PAREN", "WS", "OTHER" ];
    static ruleNames = [ "start", "instr", "hiaI", "bigI", "optI", "aftI", 
                         "delI", "verI", "modI", "vglI", "sprI", "sbrI", 
                         "bstI", "hstI", "vspI", "var", "anr", "adr", "label" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = dramaParser.ruleNames;
        this.literalNames = dramaParser.literalNames;
        this.symbolicNames = dramaParser.symbolicNames;
    }



	start() {
	    let localctx = new StartContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, dramaParser.RULE_start);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 47;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 8519672) !== 0) || _la===43) {
	            this.state = 39;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
	            if(la_===1) {
	                this.state = 38;
	                this.label();

	            }
	            this.state = 41;
	            this.instr();
	            this.state = 43;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===44) {
	                this.state = 42;
	                this.match(dramaParser.NEWLINE);
	            }

	            this.state = 49;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 50;
	        this.match(dramaParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	instr() {
	    let localctx = new InstrContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, dramaParser.RULE_instr);
	    try {
	        this.state = 68;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 4:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 52;
	            this.hiaI();
	            break;
	        case 5:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 53;
	            this.bigI();
	            break;
	        case 6:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 54;
	            this.optI();
	            break;
	        case 7:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 55;
	            this.aftI();
	            break;
	        case 8:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 56;
	            this.delI();
	            break;
	        case 9:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 57;
	            this.verI();
	            break;
	        case 10:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 58;
	            this.modI();
	            break;
	        case 11:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 59;
	            this.vspI();
	            break;
	        case 12:
	            this.enterOuterAlt(localctx, 9);
	            this.state = 60;
	            this.vglI();
	            break;
	        case 16:
	            this.enterOuterAlt(localctx, 10);
	            this.state = 61;
	            this.sprI();
	            break;
	        case 15:
	            this.enterOuterAlt(localctx, 11);
	            this.state = 62;
	            this.sbrI();
	            break;
	        case 14:
	            this.enterOuterAlt(localctx, 12);
	            this.state = 63;
	            this.hstI();
	            break;
	        case 13:
	            this.enterOuterAlt(localctx, 13);
	            this.state = 64;
	            this.bstI();
	            break;
	        case 3:
	            this.enterOuterAlt(localctx, 14);
	            this.state = 65;
	            this.match(dramaParser.INSTR_NO_MODE_NO_ARG);
	            break;
	        case 43:
	            this.enterOuterAlt(localctx, 15);
	            this.state = 66;
	            this.var_();
	            break;
	        case 23:
	            this.enterOuterAlt(localctx, 16);
	            this.state = 67;
	            this.match(dramaParser.EINDPR);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	hiaI() {
	    let localctx = new HiaIContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, dramaParser.RULE_hiaI);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 70;
	        this.match(dramaParser.HIA);
	        this.state = 72;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===26) {
	            this.state = 71;
	            this.match(dramaParser.FULL_MODE);
	        }

	        this.state = 74;
	        this.match(dramaParser.REGISTER);
	        this.state = 75;
	        this.match(dramaParser.COMMA);
	        this.state = 76;
	        this.anr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	bigI() {
	    let localctx = new BigIContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, dramaParser.RULE_bigI);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 78;
	        this.match(dramaParser.BIG);
	        this.state = 80;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===26) {
	            this.state = 79;
	            this.match(dramaParser.FULL_MODE);
	        }

	        this.state = 82;
	        this.match(dramaParser.REGISTER);
	        this.state = 83;
	        this.match(dramaParser.COMMA);
	        this.state = 84;
	        this.anr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	optI() {
	    let localctx = new OptIContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, dramaParser.RULE_optI);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 86;
	        this.match(dramaParser.OPT);
	        this.state = 88;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===26) {
	            this.state = 87;
	            this.match(dramaParser.FULL_MODE);
	        }

	        this.state = 90;
	        this.match(dramaParser.REGISTER);
	        this.state = 91;
	        this.match(dramaParser.COMMA);
	        this.state = 92;
	        this.anr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	aftI() {
	    let localctx = new AftIContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, dramaParser.RULE_aftI);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 94;
	        this.match(dramaParser.AFT);
	        this.state = 96;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===26) {
	            this.state = 95;
	            this.match(dramaParser.FULL_MODE);
	        }

	        this.state = 98;
	        this.match(dramaParser.REGISTER);
	        this.state = 99;
	        this.match(dramaParser.COMMA);
	        this.state = 100;
	        this.anr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	delI() {
	    let localctx = new DelIContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, dramaParser.RULE_delI);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 102;
	        this.match(dramaParser.DEL);
	        this.state = 104;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===26) {
	            this.state = 103;
	            this.match(dramaParser.FULL_MODE);
	        }

	        this.state = 106;
	        this.match(dramaParser.REGISTER);
	        this.state = 107;
	        this.match(dramaParser.COMMA);
	        this.state = 108;
	        this.anr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	verI() {
	    let localctx = new VerIContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, dramaParser.RULE_verI);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 110;
	        this.match(dramaParser.VER);
	        this.state = 112;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===26) {
	            this.state = 111;
	            this.match(dramaParser.FULL_MODE);
	        }

	        this.state = 114;
	        this.match(dramaParser.REGISTER);
	        this.state = 115;
	        this.match(dramaParser.COMMA);
	        this.state = 116;
	        this.anr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	modI() {
	    let localctx = new ModIContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, dramaParser.RULE_modI);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 118;
	        this.match(dramaParser.MOD);
	        this.state = 120;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===26) {
	            this.state = 119;
	            this.match(dramaParser.FULL_MODE);
	        }

	        this.state = 122;
	        this.match(dramaParser.REGISTER);
	        this.state = 123;
	        this.match(dramaParser.COMMA);
	        this.state = 124;
	        this.anr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	vglI() {
	    let localctx = new VglIContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, dramaParser.RULE_vglI);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 126;
	        this.match(dramaParser.VGL);
	        this.state = 128;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===26) {
	            this.state = 127;
	            this.match(dramaParser.FULL_MODE);
	        }

	        this.state = 130;
	        this.match(dramaParser.REGISTER);
	        this.state = 131;
	        this.match(dramaParser.COMMA);
	        this.state = 132;
	        this.anr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sprI() {
	    let localctx = new SprIContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, dramaParser.RULE_sprI);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 134;
	        this.match(dramaParser.SPR);
	        this.state = 136;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===28) {
	            this.state = 135;
	            this.match(dramaParser.LIMITED_MODE);
	        }

	        this.state = 138;
	        this.adr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sbrI() {
	    let localctx = new SbrIContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, dramaParser.RULE_sbrI);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 140;
	        this.match(dramaParser.SBR);
	        this.state = 142;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===28) {
	            this.state = 141;
	            this.match(dramaParser.LIMITED_MODE);
	        }

	        this.state = 144;
	        this.adr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	bstI() {
	    let localctx = new BstIContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, dramaParser.RULE_bstI);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 146;
	        this.match(dramaParser.BST);
	        this.state = 147;
	        this.match(dramaParser.REGISTER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	hstI() {
	    let localctx = new HstIContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, dramaParser.RULE_hstI);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 149;
	        this.match(dramaParser.HST);
	        this.state = 150;
	        this.match(dramaParser.REGISTER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	vspI() {
	    let localctx = new VspIContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, dramaParser.RULE_vspI);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 152;
	        this.match(dramaParser.VSP);
	        this.state = 153;
	        this.match(dramaParser.CD);
	        this.state = 154;
	        this.match(dramaParser.COMMA);
	        this.state = 155;
	        this.adr();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	var_() {
	    let localctx = new VarContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, dramaParser.RULE_var);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 157;
	        this.label();
	        this.state = 158;
	        this.match(dramaParser.RESGR);
	        this.state = 159;
	        this.match(dramaParser.NUMBER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	anr() {
	    let localctx = new AnrContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, dramaParser.RULE_anr);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 163;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 25:
	            this.state = 161;
	            this.match(dramaParser.REGISTER);
	            break;
	        case 29:
	        case 43:
	            this.state = 162;
	            this.adr();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	adr() {
	    let localctx = new AdrContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, dramaParser.RULE_adr);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 177;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,16,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 165;
	            this.match(dramaParser.ID);
	            break;

	        case 2:
	            this.state = 166;
	            this.match(dramaParser.NUMBER);
	            break;

	        case 3:
	            this.state = 167;
	            this.match(dramaParser.NUMBER);
	            this.state = 168;
	            this.match(dramaParser.LEFT_PAREN);
	            this.state = 174;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,15,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 169;
	                this.match(dramaParser.SIGN);
	                this.state = 170;
	                this.match(dramaParser.REGISTER);
	                break;

	            case 2:
	                this.state = 171;
	                this.match(dramaParser.REGISTER);
	                this.state = 172;
	                this.match(dramaParser.SIGN);
	                break;

	            case 3:
	                this.state = 173;
	                this.match(dramaParser.REGISTER);
	                break;

	            }
	            this.state = 176;
	            this.match(dramaParser.RIGHT_PAREN);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	label() {
	    let localctx = new LabelContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, dramaParser.RULE_label);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 179;
	        this.match(dramaParser.ID);
	        this.state = 180;
	        this.match(dramaParser.COLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

dramaParser.EOF = antlr4.Token.EOF;
dramaParser.COMMENT = 1;
dramaParser.STR = 2;
dramaParser.INSTR_NO_MODE_NO_ARG = 3;
dramaParser.HIA = 4;
dramaParser.BIG = 5;
dramaParser.OPT = 6;
dramaParser.AFT = 7;
dramaParser.DEL = 8;
dramaParser.VER = 9;
dramaParser.MOD = 10;
dramaParser.VSP = 11;
dramaParser.VGL = 12;
dramaParser.BST = 13;
dramaParser.HST = 14;
dramaParser.SBR = 15;
dramaParser.SPR = 16;
dramaParser.DRU = 17;
dramaParser.NWL = 18;
dramaParser.LEZ = 19;
dramaParser.DRS = 20;
dramaParser.KTG = 21;
dramaParser.STP = 22;
dramaParser.EINDPR = 23;
dramaParser.RESGR = 24;
dramaParser.REGISTER = 25;
dramaParser.FULL_MODE = 26;
dramaParser.HALF_MODE = 27;
dramaParser.LIMITED_MODE = 28;
dramaParser.NUMBER = 29;
dramaParser.CD = 30;
dramaParser.NUL = 31;
dramaParser.NNUL = 32;
dramaParser.POS = 33;
dramaParser.NPOS = 34;
dramaParser.NEG = 35;
dramaParser.NNEG = 36;
dramaParser.GEL = 37;
dramaParser.NGEL = 38;
dramaParser.GR = 39;
dramaParser.KLG = 40;
dramaParser.KL = 41;
dramaParser.GRG = 42;
dramaParser.ID = 43;
dramaParser.NEWLINE = 44;
dramaParser.INT = 45;
dramaParser.DOT = 46;
dramaParser.COMMA = 47;
dramaParser.PIPELINE = 48;
dramaParser.UNDERSCORE = 49;
dramaParser.SIGN = 50;
dramaParser.MINUS = 51;
dramaParser.PLUS = 52;
dramaParser.COLON = 53;
dramaParser.LEFT_PAREN = 54;
dramaParser.RIGHT_PAREN = 55;
dramaParser.WS = 56;
dramaParser.OTHER = 57;

dramaParser.RULE_start = 0;
dramaParser.RULE_instr = 1;
dramaParser.RULE_hiaI = 2;
dramaParser.RULE_bigI = 3;
dramaParser.RULE_optI = 4;
dramaParser.RULE_aftI = 5;
dramaParser.RULE_delI = 6;
dramaParser.RULE_verI = 7;
dramaParser.RULE_modI = 8;
dramaParser.RULE_vglI = 9;
dramaParser.RULE_sprI = 10;
dramaParser.RULE_sbrI = 11;
dramaParser.RULE_bstI = 12;
dramaParser.RULE_hstI = 13;
dramaParser.RULE_vspI = 14;
dramaParser.RULE_var = 15;
dramaParser.RULE_anr = 16;
dramaParser.RULE_adr = 17;
dramaParser.RULE_label = 18;

class StartContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = dramaParser.RULE_start;
    }

	EOF() {
	    return this.getToken(dramaParser.EOF, 0);
	};

	instr = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(InstrContext);
	    } else {
	        return this.getTypedRuleContext(InstrContext,i);
	    }
	};

	label = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(LabelContext);
	    } else {
	        return this.getTypedRuleContext(LabelContext,i);
	    }
	};

	NEWLINE = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(dramaParser.NEWLINE);
	    } else {
	        return this.getToken(dramaParser.NEWLINE, i);
	    }
	};


	accept(visitor) {
	    if ( visitor instanceof dramaVisitor ) {
	        return visitor.visitStart(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class InstrContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = dramaParser.RULE_instr;
    }

	hiaI() {
	    return this.getTypedRuleContext(HiaIContext,0);
	};

	bigI() {
	    return this.getTypedRuleContext(BigIContext,0);
	};

	optI() {
	    return this.getTypedRuleContext(OptIContext,0);
	};

	aftI() {
	    return this.getTypedRuleContext(AftIContext,0);
	};

	delI() {
	    return this.getTypedRuleContext(DelIContext,0);
	};

	verI() {
	    return this.getTypedRuleContext(VerIContext,0);
	};

	modI() {
	    return this.getTypedRuleContext(ModIContext,0);
	};

	vspI() {
	    return this.getTypedRuleContext(VspIContext,0);
	};

	vglI() {
	    return this.getTypedRuleContext(VglIContext,0);
	};

	sprI() {
	    return this.getTypedRuleContext(SprIContext,0);
	};

	sbrI() {
	    return this.getTypedRuleContext(SbrIContext,0);
	};

	hstI() {
	    return this.getTypedRuleContext(HstIContext,0);
	};

	bstI() {
	    return this.getTypedRuleContext(BstIContext,0);
	};

	INSTR_NO_MODE_NO_ARG() {
	    return this.getToken(dramaParser.INSTR_NO_MODE_NO_ARG, 0);
	};

	var_() {
	    return this.getTypedRuleContext(VarContext,0);
	};

	EINDPR() {
	    return this.getToken(dramaParser.EINDPR, 0);
	};

	accept(visitor) {
	    if ( visitor instanceof dramaVisitor ) {
	        return visitor.visitInstr(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class HiaIContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = dramaParser.RULE_hiaI;
    }

	HIA() {
	    return this.getToken(dramaParser.HIA, 0);
	};

	REGISTER() {
	    return this.getToken(dramaParser.REGISTER, 0);
	};

	COMMA() {
	    return this.getToken(dramaParser.COMMA, 0);
	};

	anr() {
	    return this.getTypedRuleContext(AnrContext,0);
	};

	FULL_MODE() {
	    return this.getToken(dramaParser.FULL_MODE, 0);
	};

	accept(visitor) {
	    if ( visitor instanceof dramaVisitor ) {
	        return visitor.visitHiaI(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class BigIContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = dramaParser.RULE_bigI;
    }

	BIG() {
	    return this.getToken(dramaParser.BIG, 0);
	};

	REGISTER() {
	    return this.getToken(dramaParser.REGISTER, 0);
	};

	COMMA() {
	    return this.getToken(dramaParser.COMMA, 0);
	};

	anr() {
	    return this.getTypedRuleContext(AnrContext,0);
	};

	FULL_MODE() {
	    return this.getToken(dramaParser.FULL_MODE, 0);
	};

	accept(visitor) {
	    if ( visitor instanceof dramaVisitor ) {
	        return visitor.visitBigI(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class OptIContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = dramaParser.RULE_optI;
    }

	OPT() {
	    return this.getToken(dramaParser.OPT, 0);
	};

	REGISTER() {
	    return this.getToken(dramaParser.REGISTER, 0);
	};

	COMMA() {
	    return this.getToken(dramaParser.COMMA, 0);
	};

	anr() {
	    return this.getTypedRuleContext(AnrContext,0);
	};

	FULL_MODE() {
	    return this.getToken(dramaParser.FULL_MODE, 0);
	};

	accept(visitor) {
	    if ( visitor instanceof dramaVisitor ) {
	        return visitor.visitOptI(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class AftIContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = dramaParser.RULE_aftI;
    }

	AFT() {
	    return this.getToken(dramaParser.AFT, 0);
	};

	REGISTER() {
	    return this.getToken(dramaParser.REGISTER, 0);
	};

	COMMA() {
	    return this.getToken(dramaParser.COMMA, 0);
	};

	anr() {
	    return this.getTypedRuleContext(AnrContext,0);
	};

	FULL_MODE() {
	    return this.getToken(dramaParser.FULL_MODE, 0);
	};

	accept(visitor) {
	    if ( visitor instanceof dramaVisitor ) {
	        return visitor.visitAftI(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class DelIContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = dramaParser.RULE_delI;
    }

	DEL() {
	    return this.getToken(dramaParser.DEL, 0);
	};

	REGISTER() {
	    return this.getToken(dramaParser.REGISTER, 0);
	};

	COMMA() {
	    return this.getToken(dramaParser.COMMA, 0);
	};

	anr() {
	    return this.getTypedRuleContext(AnrContext,0);
	};

	FULL_MODE() {
	    return this.getToken(dramaParser.FULL_MODE, 0);
	};
